--- a/app/src/main/res/layout/activity_guide_page.xml
+++ b/app/src/main/res/layout/activity_guide_page.xml
@@ -19,6 +19,19 @@
 
     </androidx.viewpager.widget.ViewPager>
 
+    <Button
+        android:id="@+id/skip_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="بی خیال"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:onClick="skip"
+        android:backgroundTint="#1C1D1A"
+        android:drawableEnd="@drawable/ic_baseline_done_all_24"
+        android:drawableRight="@drawable/ic_baseline_done_all_24" />
+
     <RelativeLayout
         android:id="@+id/Relative"
         android:background="#1C1D1A"
@@ -34,8 +47,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="شروع"
+            android:onClick="skip"
             android:textSize="20sp"
-            android:background="@color/button"
+            android:visibility="invisible"
             />
         <LinearLayout
             android:id="@+id/dots"
@@ -45,17 +59,19 @@
             android:layout_alignParentBottom="true"
             android:paddingBottom="20dp"
             android:orientation="horizontal"/>
+
         <Button
             android:id="@+id/next_btn"
-            android:layout_width="wrap_content"
-            android:background="#1C1D1A"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_alignParentRight="true"
-            android:paddingBottom="30dp"
-            android:drawableEnd="@drawable/baseline_chevron_right_24"
-            android:drawableRight="@drawable/baseline_chevron_right_24"
-            />
+            android:layout_alignParentBottom="true"
+            android:textColorHighlight="@color/white"
+            android:onClick="next"
+            android:backgroundTint="#1C1D1A"
+            android:drawableEnd="@drawable/baseline_chevron_right_white_24"
+            android:drawableRight="@drawable/baseline_chevron_right_white_18"
+            android:paddingBottom="30dp" />
 
     </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
