--- a/app/src/main/res/layout/slides_layout.xml
+++ b/app/src/main/res/layout/slides_layout.xml
@@ -9,9 +9,9 @@
 
     <ImageView
         android:id="@+id/slide_im"
-        android:layout_width="249dp"
+        android:layout_width="match_parent"
         android:layout_height="274dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="30dp"
         android:foregroundGravity="center"
         android:padding="20dp"
         android:visibility="visible"
@@ -20,37 +20,34 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/a" />
 
-    <TextView
-        android:id="@+id/slide_heading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="177dp"
-        android:layout_marginLeft="177dp"
-        android:layout_marginEnd="176dp"
-        android:layout_marginRight="176dp"
-        android:gravity="center|center_horizontal"
-        android:text="TextView"
-        android:textColor="#ffff"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.51"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/slide_im" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        app:layout_constraintTop_toBottomOf="@+id/slide_im"
+        android:orientation="vertical"
+        >
 
-    <TextView
-        android:id="@+id/slide_descreption"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="164dp"
-        android:layout_marginLeft="164dp"
-        android:layout_marginEnd="190dp"
-        android:text="دسترسی به بروز ترین نمودارها و تحلیل آن ها"
-        android:layout_marginRight="190dp"
-        android:gravity="center"
-        android:textColor="#ffff"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/slide_heading" />
+        <TextView
+            android:id="@+id/slide_heading"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:gravity="center"
+            android:text="TextView"
+            android:textColor="#ffff"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/slide_descreption"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:gravity="center"
+            android:text="دسترسی به بروز ترین نمودارها و تحلیل آن ها"
+            android:textColor="#ffff"
+            android:textSize="20sp"
+            app:layout_constraintTop_toBottomOf="@+id/slide_heading" />
+    </LinearLayout>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
