--- a/app/src/main/res/layout/activity_guide_page.xml
+++ b/app/src/main/res/layout/activity_guide_page.xml
@@ -69,6 +69,7 @@
             android:textColorHighlight="@color/white"
             android:onClick="next"
             android:backgroundTint="#1C1D1A"
+            android:gravity="center"
             android:drawableEnd="@drawable/baseline_chevron_right_white_24"
             android:drawableRight="@drawable/baseline_chevron_right_white_18"
             android:paddingBottom="30dp" />
